# DOF5RobotControl-GUI

./: .gitignore  App.xaml  App.xaml.cs  DOF5RobotControl.csproj  DOF5RobotControl.sln  DOF5RobotControl_GUI.csproj  DOF5RobotControl_GUI.sln  GamepadStatusConverter.cs  JogHandler.cs  JointPosition.cs  JointsPosition.cs  MainViewModel.cs  MainWindow.xaml  MainWindow.xaml.cs  ManualControlData.cs  ManualControlWindow.xaml  ManualControlWindow.xaml.cs  MyData.cs  README.md  SpeedLevelConverter.cs
Converter/: BoolInverseConverter.cs  ConnectBtnConverter.cs  GamepadStatusConverter.cs  SpeedLevelConverter.cs
D5Robot/: D5JointSpace.cs  D5Robot.cs  D5Robot.csproj  D5State.cs  D5TaskSpace.cs  KineHelper.cs  NatorsMotor.cs  RmdMotor.cs
D5RobotController_CLR/: AssemblyInfo.cpp  CMakeLists.txt  D5RobotController_CLR.cpp  D5RobotController_CLR.h  D5RobotController_CLR.vcxproj  D5RobotController_CLR.vcxproj.filters  NatorsController.cpp  NatorsController.h  pch.h
D5RobotController_CLR/include/: D5Robot.h  D5RobotDll.h  ErrorCode.h  JointSpace.hpp  KineHelper.hpp  NatorMotor.h  RMDMotor.h  RobotException.hpp  SerialPort.h  TaskSpace.hpp
D5RobotController_CLR/lib/Nators/SDK1.4.12/: dll手动放置.txt
D5RobotController_CLR/lib/Nators/SDK1.4.12/32/: NTControl.lib
D5RobotController_CLR/lib/Nators/SDK1.4.12/64/: NTControl.lib
D5RobotController_CLR/src/: D5Robot.cpp  D5RobotDll.cpp  NatorMotor.cpp  RMDMotor.cpp  SerialPort.cpp
D5RobotWPF/: App.config  App.xaml  App.xaml.cs  CameraWindow.xaml  CameraWindow.xaml.cs  ConfigWindow.xaml  ConfigWindow.xaml.cs  DOF5RobotControl_GUI.csproj  MainWindow.xaml  MainWindow.xaml.cs  ManualControlWindow.xaml  ManualControlWindow.xaml.cs  Settings.cs
D5RobotWinUI/: App.xaml  App.xaml.cs  D5RobotWinUI.csproj  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  app.manifest
Dll/: D5RAPI.exp  D5RAPI.lib  D5RobotDll.exp  D5RobotDll.lib
Model/: D5RControl.cs  D5ROpcNodeManager.cs  D5Robot.cs  D5RobotOpcNodeManager.cs  JogHandler.cs  JointSpace.cs  JointsPosition.cs  KineHelper.cs  RoboticState.cs  TaskSpace.cs  VibrateHelper.cs
OnnxInferenceLibrary/: ActorPolicy.cs  OnnxInferenceBase.cs  OnnxInferenceLibrary.csproj  policy.onnx  policy_v0.3.onnx
Properties/: Settings.Designer.cs
RobotClient/: RobotClient.py  RobotClient.pyproj  requirements.txt  robot_service.py
UnitTest/: JointSpaceTests.cs  (+8 more)
(+97 files in other folders)
